projetGL/src/test/deca/syntax/invalid/ourTests/test_bloc_inside_class.deca
//description:mauvaise declaration de la class


class A{

{
}  
}

    
